# SberSchool21

./: README.md
Lenguage C/: README.md
Lenguage C/3DViewer_V.1.0/: Doxyfile  Makefile  README.md
Lenguage C/3DViewer_V.1.0/3DViewerV1.0/: CMakeLists.txt  resources.qrc
Lenguage C/3DViewer_V.1.0/3DViewerV1.0/back/: s21_3d_viewer.h  s21_affine.c  s21_obj_file.c
Lenguage C/3DViewer_V.1.0/3DViewerV1.0/front/: main.cpp
Lenguage C/3DViewer_V.1.0/UTests/: test_affine.c  test_obj_file.c  tests.c  tests.h
Lenguage C/3DViewer_V.1.0/data-samples/: cube.txt
Lenguage C/Decimal/: README.md  s21_another.c  s21_comparison.c  s21_decimal.c
Lenguage C/Matrix/: Makefile  README.md  s21_matrix.c  s21_test_matrix.c
Lenguage C/SimpleBashUtils/: README.md
Lenguage C/SimpleBashUtils/cat/: Makefile  s21_cat.c
Lenguage C/SimpleBashUtils/common/: s21_getline.c  s21_getline.h
Lenguage C/SimpleBashUtils/grep/: Makefile  s21_grep.c  test1_s21_grep.sh
Lenguage C/StringPlus/: Makefile  README.md  s21_sprintf.c
